# tab

./: .gitignore  Cargo.toml  README.md
.github/workflows/: auto-release.yml  ci.yml  release.yml
Formula/: tab.rb
crates/tab-cli/: Cargo.toml
crates/tab-cli/src/: hook.rs  init.rs  logs.rs  main.rs  service.rs  settings.rs  term.rs  tui.rs
crates/tab-cli/src/init/: bash.rs  fish.rs  mod.rs  pwsh.rs  zsh.rs
crates/tab-cli/src/service/: launchd.rs  mod.rs  systemd.rs  templates.rs  windows.rs
crates/tab-core/: Cargo.toml
crates/tab-core/src/: config.rs  ipc.rs  lib.rs  logging.rs  paths.rs  protocol.rs  socket.rs
crates/tab-daemon/: Cargo.toml
crates/tab-daemon/src/: cargo_ctx.rs  compose_ctx.rs  context.rs  go_ctx.rs  main.rs  make_ctx.rs  paths.rs  python_ctx.rs  query.rs  scripts.rs  server.rs  session.rs
crates/tab-history/: Cargo.toml
crates/tab-history/src/: bash.rs  fish.rs  lib.rs  parser.rs  pwsh.rs  scorer.rs  source.rs  watcher.rs  zsh.rs
crates/tab-overlay/: Cargo.toml
crates/tab-overlay/src/: accessibility.rs  connection.rs  main.rs  view.rs  window.rs
resources/: com.tab.daemon.plist
shell/: tab.bash  tab.fish  tab.zsh
