[workspace]
members = [
    "crates/tab-core",
    "crates/tab-history",
    "crates/tab-daemon",
    "crates/tab-cli",
]
resolver = "2"

[workspace.package]
version = "0.7.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/okisdev/tab"

[workspace.dependencies]
tab-core = { path = "crates/tab-core" }
tab-history = { path = "crates/tab-history" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nucleo-matcher = "0.3"
notify = "7"
interprocess = { version = "2.2", features = ["tokio"] }
crossterm = "0.28"
whoami = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
