[package]
name = "tab-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tab"
path = "src/main.rs"

[dependencies]
tab-core.workspace = true
tab-history.workspace = true
tokio.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
interprocess = { workspace = true }
crossterm.workspace = true
whoami.workspace = true
