[package]
name = "tab-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
tab-core = { workspace = true }
tab-history = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
nucleo-matcher = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
