[package]
name = "tab-history"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tab-core.workspace = true
nucleo-matcher.workspace = true
anyhow.workspace = true
tracing.workspace = true
notify.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile = "3"
