[package]
name = "tab-overlay"
version.workspace = true
edition.workspace = true

[dependencies]
tab-core = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"
objc2-core-foundation = "0.3"
block2 = "0.6"
core-foundation = "0.10"
